--- a/src/WebAPI/appsettings.Development.json
+++ b/src/WebAPI/appsettings.Development.json
@@ -12,7 +12,8 @@
     "HostName": "localhost",
     "Port": 5672,
     "UserName": "guest",
-    "Password": "guest"
+    "Password": "guest",
+    "ExchangeName": "notifications"
   },
   "SmtpSettings": {
     "Host": "smtp.gmail.com",
