Update Notification Add Kafka Remove RabbitMq

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,107 +1,117 @@
 services:
 
-  # -------------------------------
-  # 1) Keycloak
-  # -------------------------------
-  keycloak:
-    image: quay.io/keycloak/keycloak:latest
-    container_name: keycloak
+  kafka1:
+    image: confluentinc/cp-kafka:7.5.0
+    container_name: kafka1
+    ports:
+      - "9092:9092"
     environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
+      KAFKA_NODE_ID: 1
+      KAFKA_PROCESS_ROLES: "broker,controller"
+      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka1:29093,2@kafka2:29093"
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_LISTENERS: "PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:29093"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka1:9092"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
+      KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
+      KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 2
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
+      KAFKA_LOG_DIRS: "/tmp/kraft-combined-logs"
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 2
+      KAFKA_MIN_INSYNC_REPLICAS: 2
+      CLUSTER_ID: "MkU3OEVBNTcwNTJENDM2Qk"
+    networks:
+      - archium-network
+    healthcheck:
+      test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    volumes:
+      - kafka1-data:/var/lib/kafka/data
 
-      # Use Postgres for the Keycloak database:
-      DB_VENDOR: postgres
-      DB_ADDR: keycloak-db
-      DB_PORT: 5432
-      DB_DATABASE: keycloakdb
-      DB_USER: keycloakuser
-      DB_PASSWORD: keycloakpass
-
-      # Optional: specify hostname if needed
-      # KEYCLOAK_HOSTNAME: keycloak.localhost
-      # "start-dev" runs Keycloak in dev mode, but still uses Postgres instead of the embedded H2  
-      # "start" for production mode (no dev tweaks)
-    command: ["start-dev"]  
+  kafka2:
+    image: confluentinc/cp-kafka:7.5.0
+    container_name: kafka2
+    ports:
+      - "9093:9092"
+    environment:
+      KAFKA_NODE_ID: 2
+      KAFKA_PROCESS_ROLES: "broker,controller"
+      KAFKA_CONTROLLER_QUORUM_VOTERS: "1@kafka1:29093,2@kafka2:29093"
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_LISTENERS: "PLAINTEXT://0.0.0.0:9092,CONTROLLER://0.0.0.0:29093"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka2:9092"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
+      KAFKA_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
+      KAFKA_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 2
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
+      KAFKA_LOG_DIRS: "/tmp/kraft-combined-logs"
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 2
+      KAFKA_MIN_INSYNC_REPLICAS: 2
+      CLUSTER_ID: "MkU3OEVBNTcwNTJENDM2Qk"
+    networks:
+      - archium-network
+    healthcheck:
+      test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+    volumes:
+      - kafka2-data:/var/lib/kafka/data
+      
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    ports:
+      - "8081:8080"
+    environment:
+      - KAFKA_CLUSTERS_0_NAME=local
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka1:9092,kafka2:9092
+      - SERVER_PORT=8080
     depends_on:
-      - keycloak-db
-    ports:
-      - "8080:8080"
-    # volumes, if needed for themes or custom configs, can go here
-
-  # -------------------------------
-  # 2) Postgres DB for Keycloak
-  # -------------------------------
-  keycloak-db:
-    image: postgres:15.2
-    container_name: keycloak-db
-    environment:
-      POSTGRES_USER: keycloakuser
-      POSTGRES_PASSWORD: keycloakpass
-      POSTGRES_DB: keycloakdb
-    ports:
-      - "5433:5432"  # Expose if you need to connect externally on 5433
-    volumes:
-      - ./volumes/keycloak_db_data:/var/lib/postgresql/data
-    # No depends_on needed since Keycloak will wait for this
-  
-  # -------------------------------
-  # 3) Postgres DB for DMS.Auth
-  # -------------------------------
-  dms-db:
-    image: postgres:15.2
-    container_name: dms-db
-    environment:
-      POSTGRES_USER: dmsauthuser
-      POSTGRES_PASSWORD: dmsauthpass
-      POSTGRES_DB: dmsauthdb
-    ports:
-      - "5434:5432"  # Expose if you want external DB access
-    volumes:
-      - ./volumes/dms_db_data:/var/lib/postgresql/data
-    # The microservice depends_on this
-
-    # image: mcr.microsoft.com/mssql/server:2022-latest
-    # container_name: dms-db
-    # environment:
-    #   SA_PASSWORD: "YourStrongPassw0rd"
-    #   ACCEPT_EULA: "Y"
-    #   # Additional config can go here
-    # ports:
-    #   - "1433:1433"  # Expose SQL Server on localhost:1433
-    # # If you want a named volume for data persistence:
-    # # volumes:
-    # #   - sql_data:/var/opt/mssql
+      - kafka1
+      - kafka2
+    networks:
+      - archium-network
+    restart: always
 
 
-  # -------------------------------
-  # 4) DMS.Auth (ASP.NET Core)
-  # -------------------------------
-  dms.auth.webapi:
-    image: ${DOCKER_REGISTRY-}dmsauthwebapi
+  notifications.webapi:
+    container_name: notifications-api
     build:
-      context: .
-      dockerfile: src/WebAPI/Dockerfile   
+        context: .
+        dockerfile: src/WebAPI/Dockerfile   
     environment:
-      # .NET environment
-      ASPNETCORE_ENVIRONMENT: "Development"
-
-      # Keycloak config - point the microservice to the internal Keycloak address
-      KEYCLOAK_URL: "http://keycloak:8080"
-      KEYCLOAK_REALM: "myrealm"
-      KEYCLOAK_CLIENT_ID: "myclient"
-      KEYCLOAK_CLIENT_SECRET: "mysecret" # or manage secrets via a safer method
-
-      # Example DB connection string for Postgres
-      # (the host is "dms-db", the container name in the same docker network)
-      DB_CONNECTION_STRING: "Host=dms-db;Port=5432;Database=dmsauthdb;User ID=dmsauthuser;Password=dmsauthpass"
-      #DB_CONNECTION_STRING: "Server=sqlserver;Database=MyDb;User ID=sa;Password=YourStrongPassw0rd;TrustServerCertificate=True"
-
+        # .NET environment
+        ASPNETCORE_ENVIRONMENT: "Development"
     depends_on:
-      - keycloak
-      - dms-db
+        - kafka1
+        - kafka2
+    networks:
+        - archium-network
     ports:
-      - "5000:8070"
+        - "5000:80"
+
+volumes:
+    db-data:
+    kafka1-data:
+    kafka2-data:
+
+networks:
+  archium-network:
+    driver: bridge
+
+
+
 
         
 
