--- a/src/Application/Notifications.Application.csproj
+++ b/src/Application/Notifications.Application.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	  <RootNamespace>DMS.Auth.Application</RootNamespace>
-	  <AssemblyName>DMS.Auth.Application</AssemblyName>
+	  <RootNamespace>Notifications..Application</RootNamespace>
+	  <AssemblyName>Notifications..Application</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
