--- a/src/Domain/Notifications.Domain.csproj
+++ b/src/Domain/Notifications.Domain.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	  <RootNamespace>DMS.Auth.Domain</RootNamespace>
-	  <AssemblyName>DMS.Auth.Domain</AssemblyName>
+	  <RootNamespace>Notifications..Domain</RootNamespace>
+	  <AssemblyName>Notifications..Domain</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
