--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -4,7 +4,7 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
@@ -25,7 +25,7 @@
   },
   "Kafka": {
     "BootstrapServers": "kafka1:9092,kafka2:9092",
-    "Topic": "TopicA",
+    "Topic": "email",
     "ReconnectBackoffMs": 50, // Quick reconnect to alternative broker
     "ReconnectBackoffMaxMs": 5000, // Max reconnect backoff
 
