--- a/src/API/Properties/launchSettings.json
+++ b/src/API/Properties/launchSettings.json
@@ -2,8 +2,8 @@
   "profiles": {
     "http": {
       "commandName": "Project",
-      "launchBrowser": false,
-      "launchUrl": "webapi",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
