--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -5,7 +5,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "RabbitMqSettings": {
