Update to run Api only

--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -24,7 +24,7 @@
     "UseSsl": true
   },
   "Kafka": {
-    "BootstrapServers": "kafka1:9092,kafka2:9092",
+    "BootstrapServers": "localhost:9092,localhost:9093",
     "Topic": "email",
     "ReconnectBackoffMs": 50, // Quick reconnect to alternative broker
     "ReconnectBackoffMaxMs": 5000, // Max reconnect backoff
