--- a/src/Worker/appsettings.Development.json
+++ b/src/Worker/appsettings.Development.json
@@ -8,21 +8,21 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
-  "SmtpSettings": {
-    "Host": "cbs-gr.mail.protection.outlook.com",
-    "Port": 25,
-    "Username": "cbs-b2b@cbs.gr",
-    "Password": "R8u5WB$jE57S#H1N!A1bn%4f",
-    "From": "cbs-b2b@cbs.gr"
-  },
   //"SmtpSettings": {
-  //  "Host": "smtp.gmail.com",
-  //  "Port": 587,
-  //  "Username": "giokaspan@gmail.com",
-  //  "Password": "nhcvhgvsomperylp ",
-  //  "From": "no-reply@example.com",
-  //  "UseSsl": true
+  //  "Host": "cbs-gr.mail.protection.outlook.com",
+  //  "Port": 25,
+  //  "Username": "cbs-b2b@cbs.gr",
+  //  "Password": "R8u5WB$jE57S#H1N!A1bn%4f",
+  //  "From": "cbs-b2b@cbs.gr"
   //},
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "giokaspan@gmail.com",
+    "Password": "nhcvhgvsomperylp ",
+    "From": "no-reply@example.com",
+    "UseSsl": true
+  },
   "Kafka": {
     "BootstrapServers": "localhost:9092,localhost:9093",
     "Topic": "email",
