--- a/src/Worker/appsettings.Development.json
+++ b/src/Worker/appsettings.Development.json
@@ -8,13 +8,6 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
-  //"SmtpSettings": {
-  //  "Host": "cbs-gr.mail.protection.outlook.com",
-  //  "Port": 25,
-  //  "Username": "cbs-b2b@cbs.gr",
-  //  "Password": "R8u5WB$jE57S#H1N!A1bn%4f",
-  //  "From": "cbs-b2b@cbs.gr"
-  //},
   "SmtpSettings": {
     "Host": "smtp.gmail.com",
     "Port": 587,
@@ -25,7 +18,7 @@
   },
   "Kafka": {
     "BootstrapServers": "localhost:9092,localhost:9093",
-    "Topic": "email",
+    "Topics": [ "notifications.email.system" ],
     "ReconnectBackoffMs": 50, // Quick reconnect to alternative broker
     "ReconnectBackoffMaxMs": 5000, // Max reconnect backoff
 
@@ -39,7 +32,7 @@
     "MessageTimeoutMs": 15000,
 
     // Consumer settings
-    "GroupId": "ConsumerGroupA",
+    "GroupId": "email-consumers",
     "AutoOffsetReset": "Earliest",
     "EnableAutoCommit": true,
     "AutoCommitIntervalMs": 5000,
