--- a/src/Worker/appsettings.json
+++ b/src/Worker/appsettings.json
@@ -1,8 +1,42 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost:5433;Database=dmsauthdb:5433;Username=dmsauth;Password=dmsauth;Include Error Detail=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Information"
     }
+  },
+  "SmtpSettings": {
+    "Host": "cbs-gr.mail.protection.outlook.com",
+    "Port": 25,
+    "Username": "cbs-b2b@cbs.gr",
+    "Password": "R8u5WB$jE57S#H1N!A1bn%4f",
+    "From": "cbs-b2b@cbs.gr"
+  },
+  "Kafka": {
+    "BootstrapServers": "kafka1:9092",
+    "Topics": [ "notifications.email.system" ],
+    "ReconnectBackoffMs": 50, // Quick reconnect to alternative broker
+    "ReconnectBackoffMaxMs": 5000, // Max reconnect backoff
+
+    // Producer settings
+    "Acks": "Leader",
+    "SocketConnectionSetupTimeoutMs": 10000, // Time for initial connection
+    "SocketTimeoutMs": 5000, // Failure detection
+    "MessageSendMaxRetries": 5, // Retry attempts
+    "RetryBackoffMs": 100, // Delay between retries
+    "RequestTimeoutMs": 5000,
+    "MessageTimeoutMs": 15000,
+
+    // Consumer settings
+    "GroupId": "email-consumers",
+    "AutoOffsetReset": "Earliest",
+    "EnableAutoCommit": true,
+    "AutoCommitIntervalMs": 5000,
+    "SessionTimeoutMs": 30000,
+    "MaxPollIntervalMs": 300000,
+    "ApiVersionRequestTimeoutMs": 10000
   }
 }
