--- a/src/Worker/Notifications.Worker.csproj
+++ b/src/Worker/Notifications.Worker.csproj
@@ -20,4 +20,19 @@
     <ProjectReference Include="..\Application\Notifications.Application.csproj" />
     <ProjectReference Include="..\Infrastructure\Notifications.Infrastructure.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Templates\Email\MfaCode.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Templates\Email\PasswordReset.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Templates\Email\VerificationCode.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Templates\Email\VerificationLink.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
