--- a/src/Worker/appsettings.Development.json
+++ b/src/Worker/appsettings.Development.json
@@ -18,26 +18,17 @@
   },
   "Kafka": {
     "BootstrapServers": "localhost:9092,localhost:9093",
-    "Topics": [ "notifications.email.system" ],
-    "ReconnectBackoffMs": 50, // Quick reconnect to alternative broker
-    "ReconnectBackoffMaxMs": 5000, // Max reconnect backoff
-
-    // Producer settings
-    "Acks": "Leader",
-    "SocketConnectionSetupTimeoutMs": 10000, // Time for initial connection
-    "SocketTimeoutMs": 5000, // Failure detection
-    "MessageSendMaxRetries": 5, // Retry attempts
-    "RetryBackoffMs": 100, // Delay between retries
-    "RequestTimeoutMs": 5000,
-    "MessageTimeoutMs": 15000,
+    "Topics": [ "notifications.email.auth", "notifications.email.nba-backend" ],
+    "ReconnectBackoffMs": 50, // Base delay before reconnecting to a broker
+    "ReconnectBackoffMaxMs": 5000, // Maximum delay when exponential backoff applies
 
     // Consumer settings
-    "GroupId": "email-consumers",
-    "AutoOffsetReset": "Earliest",
-    "EnableAutoCommit": true,
-    "AutoCommitIntervalMs": 5000,
-    "SessionTimeoutMs": 30000,
-    "MaxPollIntervalMs": 300000,
-    "ApiVersionRequestTimeoutMs": 10000
+    "GroupId": "email-consumers", // Consumer group for load balancing
+    "AutoOffsetReset": "Earliest", // Start from earliest if no committed offset
+    "EnableAutoCommit": false, // commit manually in code 
+    "AutoCommitIntervalMs": 5000, // Ignored when EnableAutoCommit = false
+    "SessionTimeoutMs": 30000, // Heartbeat timeout before rebalance
+    "MaxPollIntervalMs": 300000, // Max allowed processing time before consumer removed
+    "ApiVersionRequestTimeoutMs": 10000 // Timeout for metadata / version requests
   }
 }
