--- a/src/Worker/appsettings.json
+++ b/src/Worker/appsettings.json
@@ -17,23 +17,14 @@
   },
   "Kafka": {
     "BootstrapServers": "kafka1:9092",
-    "Topics": [ "notifications.email.system" ],
-    "ReconnectBackoffMs": 50, // Quick reconnect to alternative broker
-    "ReconnectBackoffMaxMs": 5000, // Max reconnect backoff
-
-    // Producer settings
-    "Acks": "Leader",
-    "SocketConnectionSetupTimeoutMs": 10000, // Time for initial connection
-    "SocketTimeoutMs": 5000, // Failure detection
-    "MessageSendMaxRetries": 5, // Retry attempts
-    "RetryBackoffMs": 100, // Delay between retries
-    "RequestTimeoutMs": 5000,
-    "MessageTimeoutMs": 15000,
+    "Topics": [ "notifications.email.auth", "notifications.email.nba-backend" ],
+    "ReconnectBackoffMs": 50,
+    "ReconnectBackoffMaxMs": 5000,
 
     // Consumer settings
     "GroupId": "email-consumers",
     "AutoOffsetReset": "Earliest",
-    "EnableAutoCommit": true,
+    "EnableAutoCommit": false,
     "AutoCommitIntervalMs": 5000,
     "SessionTimeoutMs": 30000,
     "MaxPollIntervalMs": 300000,
