--- a/src/API/appsettings.Development.json
+++ b/src/API/appsettings.Development.json
@@ -18,8 +18,8 @@
   "SmtpSettings": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "Username": "giokaspan@gmail.com",
-    "Password": "nhcvhgvsomperylp ",
+    "Username": ",
+    "Password": "",
     "From": "no-reply@example.com",
     "UseSsl": true
   },
