--- a/src/Worker/appsettings.Development.json
+++ b/src/Worker/appsettings.Development.json
@@ -1,34 +1,58 @@
-{
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost:5433;Database=dmsauthdb:5433;Username=dmsauth;Password=dmsauth;Include Error Detail=true"
-  },
+{  
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
       "Microsoft.AspNetCore": "Information"
     }
   },
-  "SmtpSettings": {
-    "Host": "smtp.gmail.com",
-    "Port": 587,
-    "Username": "giokaspan@gmail.com",
-    "Password": "nhcvhgvsomperylp ",
-    "From": "no-reply@example.com",
-    "UseSsl": true
-  },
-  "Kafka": {
-    "BootstrapServers": "localhost:9092,localhost:9093",
-    "Topics": [ "notifications.email.auth", "notifications.email.nba-backend" ],
-    "ReconnectBackoffMs": 50, // Base delay before reconnecting to a broker
-    "ReconnectBackoffMaxMs": 5000, // Maximum delay when exponential backoff applies
-
-    // Consumer settings
-    "GroupId": "email-consumers", // Consumer group for load balancing
-    "AutoOffsetReset": "Earliest", // Start from earliest if no committed offset
-    "EnableAutoCommit": false, // commit manually in code 
-    "AutoCommitIntervalMs": 5000, // Ignored when EnableAutoCommit = false
-    "SessionTimeoutMs": 30000, // Heartbeat timeout before rebalance
-    "MaxPollIntervalMs": 300000, // Max allowed processing time before consumer removed
-    "ApiVersionRequestTimeoutMs": 10000 // Timeout for metadata / version requests
+  "Serilog": {    
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
+            {
+              "Name": "File",
+              "Args": {
+                "path": "Logs/log.txt",
+                "rollingInterval": "Day",
+                "retainedFileCountLimit": 2,
+                "fileSizeLimitBytes": 10485760
+              }
+            },
+            {
+              "Name": "File",
+              "Args": {
+                "path": "Logs/log.clef",
+                "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+                "rollingInterval": "Day",
+                "retainedFileCountLimit": 2,
+                "fileSizeLimitBytes": 10485760
+              }
+            }
+          ]
+        }
+      },
+      {
+        "Name": "Elasticsearch",
+        "Args": {
+          "nodeUris": "http://localhost:9200",
+          "indexFormat": "notifications-worker-logs-{0:yyyy.MM.dd}",
+          "autoRegisterTemplate": true,
+          "autoRegisterTemplateVersion": "ESv7"
+        }
+      }
+    ]
   }
+  
 }
