--- a/src/Worker/appsettings.json
+++ b/src/Worker/appsettings.json
@@ -1,33 +1,58 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost:5433;Database=dmsauthdb:5433;Username=dmsauth;Password=dmsauth;Include Error Detail=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SmtpSettings": {
-    "Host": "cbs-gr.mail.protection.outlook.com",
-    "Port": 25,
-    "Username": "cbs-b2b@cbs.gr",
-    "Password": "R8u5WB$jE57S#H1N!A1bn%4f",
-    "From": "cbs-b2b@cbs.gr"
-  },
-  "Kafka": {
-    "BootstrapServers": "kafka1:9092",
-    "Topics": [ "notifications.email.auth", "notifications.email.nba-backend" ],
-    "ReconnectBackoffMs": 50,
-    "ReconnectBackoffMaxMs": 5000,
-
-    // Consumer settings
-    "GroupId": "email-consumers",
-    "AutoOffsetReset": "Earliest",
-    "EnableAutoCommit": false,
-    "AutoCommitIntervalMs": 5000,
-    "SessionTimeoutMs": 30000,
-    "MaxPollIntervalMs": 300000,
-    "ApiVersionRequestTimeoutMs": 10000
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
+            {
+              "Name": "File",
+              "Args": {
+                "path": "Logs/log.txt",
+                "rollingInterval": "Day",
+                "retainedFileCountLimit": 10,
+                "fileSizeLimitBytes": 10485760
+              }
+            },
+            {
+              "Name": "File",
+              "Args": {
+                "path": "Logs/log.clef",
+                "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+                "rollingInterval": "Day",
+                "retainedFileCountLimit": 10,
+                "fileSizeLimitBytes": 10485760
+              }
+            }
+          ]
+        }
+      },
+      {
+        "Name": "Elasticsearch",
+        "Args": {
+          "nodeUris": "http://elasticsearch:9200",
+          "indexFormat": "notifications-worker-logs-{0:yyyy.MM.dd}",
+          "autoRegisterTemplate": true,
+          "autoRegisterTemplateVersion": "ESv7"
+        }
+      }
+    ]
   }
+
 }
