--- a/src/Worker/Dockerfile
+++ b/src/Worker/Dockerfile
@@ -1,5 +1,3 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/runtime:8.0 AS base
 USER $APP_UID
@@ -10,19 +8,22 @@ WORKDIR /app
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/Worker/Worker.csproj", "src/Worker/"]
-RUN dotnet restore "./src/Worker/Worker.csproj"
+COPY ["src/Worker/Notifications.Worker.csproj", "src/Worker/"]
+COPY ["src/Application/Notifications.Application.csproj", "src/Application/"]
+COPY ["src/Domain/Notifications.Domain.csproj", "src/Domain/"]
+COPY ["src/Infrastructure/Notifications.Infrastructure.csproj", "src/Infrastructure/"]
+RUN dotnet restore "./src/Worker/Notifications.Worker.csproj"
 COPY . .
 WORKDIR "/src/src/Worker"
-RUN dotnet build "./Worker.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./Notifications.Worker.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Worker.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./Notifications.Worker.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Worker.dll"]
+ENTRYPOINT ["dotnet", "Notifications.Worker.dll"]
